# type-enforcer

./: .gitignore  README.md  SECURITY.md  pyproject.toml  setup-pre-commit.sh
.github/workflows/: ci.yml  pypi-publish.yml  security.yml
examples/: api_response_validation.py
src/type_enforcer/: enforcer.py
tests/: test_enforcer.py
